Add data-day calendarIO

--- a/index.html
+++ b/index.html
@@ -52,79 +52,19 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <!-- FAKE calendario -->
-                            <div id="calendarIO">
-                                <div class="header-cio">
-                                    <div class="monthyear-cio">
-                                        <h2>August / 2017</h2>
-                                    </div>
-                                    <table cellspadding="0" cellspacing="0" class="days-cio">
-                                        <tr> 
-                                            <td>S</td> <td>M</td> <td>T</td> <td>W</td> <td>T</td> <td>F</td> <td>S</td> 
-                                        </tr>
-                                    </table>
-                                </div>
-                                <div class="body-cio">
-                                    <table cellspadding="0" cellspacing="0" class="days-cio">
-                                        <tr>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td>1</td>
-                                            <td>2</td>
-                                            <td>3</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4</td>
-                                            <td>5</td>
-                                            <td>6</td>
-                                            <td>7</td>
-                                            <td>8</td>
-                                            <td>9</td>
-                                            <td>10</td>
-                                        </tr>
-                                        <tr>
-                                            <td>11</td>
-                                            <td>12</td>
-                                            <td class="active">13</td>
-                                            <td>14</td>
-                                            <td>15</td>
-                                            <td>16</td>
-                                            <td>17</td>
-                                        </tr>
-                                        <tr>
-                                            <td>18</td>
-                                            <td>19</td>
-                                            <td>20</td>
-                                            <td>21</td>
-                                            <td>22</td>
-                                            <td>23</td>
-                                            <td>24</td>
-                                        </tr>
-                                        <tr>
-                                            <td>25</td>
-                                            <td>26</td>
-                                            <td>27</td>
-                                            <td>28</td>
-                                            <td>29</td>
-                                            <td>30</td>
-                                            <td>31</td>
-                                        </tr>
-                                    </table>
-                                </div>
-                            </div>
+                            <div id="calendarIO"></div>
                         </div>
                     </div>
                 </div>
             </section>
         </div> 
         <script src="js/jquery/jquery.js"></script>
-        <script src="js/bootstrap/bootstrap.min.js"></script>
+        <script src="helper/calendario/calendarIO.js"></script>
         <script>
             $(document).ready(function(){
                 let windowHeight = $(window).height();
                 $('.header-hero').height(windowHeight);
+                $('#calendarIO').calendarIO();
             });
         </script>    
     </body>
