--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                                 <div id="check_in" class="check-io">Chose a date</div>                                          
                                 <br>
                                 <p>Check-out</p>
-                                <div id="check_out" class="check-io">Chose a date</div>                                      
+                                <div id="check_out" class="check-io">Chose a date</div>  
+                                <br>
+                                <button class="btn-search">Search hotels</button>                                    
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -56,75 +58,13 @@
                         </div>
                     </div>
                 </div>
+                <div class="container-fluid">
+                    <div id="show_result"></div>
+                </div>
             </section>
         </div> 
         <script src="js/jquery/jquery.js"></script>
         <script src="helper/calendario/calendarIO.js"></script>
-        <script>
-            $(document).ready(function(){
-                let windowHeight = $(window).height();
-                $('.header-hero').height(windowHeight);
-
-                const selectedDate = { firstDay: null, lastDay: null, month: new Date().getMonth() };
-
-                const loadCalendar = (optDays) => {
-                    $('#calendarIO').calendarIO({ 
-                        nav: true, 
-                        selectable: true, 
-                        firstDay: optDays.firstDay, 
-                        lastDay: optDays.lastDay,
-                        month: optDays.month
-                    },function(data){
-                        console.log(data);
-                    });
-                };
-                loadCalendar(selectedDate);
-
-                
-
-                //CLOSE WINDOW CALENDAR
-                $('.close-wd').on('click',function(){
-                    $('.calendar-window').fadeOut();
-                    $('#calendar_checkin').remove();
-                    $('#calendar_checkout').remove();
-                });
-
-                // CHECKIN & CHECKOUT WINDOW
-                const calendarWindow = (conf,callback) => {
-                    conf.btn.on('click',function(){
-                        $('.calendar-window').fadeIn().append('<div id="'+conf.calendar+'"></div>');
-                        $('#'+conf.calendar).calendarIO({ nav: true, selectable: true },function(data){
-                            if(callback){
-                                callback(data);
-                            }
-                        });
-                        
-                    })
-                }
-                calendarWindow({ //CHECKIN
-                    btn: $('#check_in'),
-                    calendar: 'calendar_checkin'
-                },function(data){
-                    const td = $('#calendar_checkin').find('.data-calendarIO');
-                    td.on('click',function(){
-                        selectedDate.firstDay = Number($($(this).find('span')[1]).attr('data-day'));
-                        selectedDate.month = data.month;
-                        loadCalendar(selectedDate);
-                    });
-                });
-
-                calendarWindow({ //CHECKOUT
-                    btn: $('#check_out'),
-                    calendar: 'calendar_checkout'
-                },function(data){
-                    const td = $('#calendar_checkout').find('.data-calendarIO');
-                    td.on('click',function(){
-                        selectedDate.lastDay = Number($($(this).find('span')[1]).attr('data-day'));
-                        selectedDate.month = data.month;
-                        loadCalendar(selectedDate);
-                    })
-                });
-            });
-        </script>    
+        <script src="js/index.js"></script>  
     </body>
 </html>
